test/rewriter/errors/expr_anti_quotation_payload.ml
let bad_anti_quote_payload = [%yojson [%y? _]]
